# LuaWrapper

./: CMakeLists.txt
src/luawrapper/: foo.cpp  luawrapper.hpp
src/luawrapper/entities/: concepts.hpp  entities.hpp  luaboolean.cpp  luaboolean.hpp  luaentities.hpp  luaentity.cpp  luaentity.hpp  luaentityfactory.cpp  luaentityfactory.hpp  luaentityforwarddeclarations.hpp  luafunction.cpp  luafunction.hpp  lualightuserdata.cpp  lualightuserdata.hpp  luanil.cpp  luanil.hpp  luanumber.cpp  luanumber.hpp  luastring.cpp  luastring.hpp  luatable.cpp  luatable.hpp
src/luawrapper/state/: luastate.cpp  luastate.hpp  parameterstack.cpp  parameterstack.hpp  state.hpp
src/luawrapper/util/: luaerror.cpp  luaerror.hpp  luainvoke.cpp  luainvoke.hpp  luatypes.cpp  luatypes.hpp  luautil.hpp
src/test/: commonconversionutil.cpp  commonconversionutil.hpp  echotest.cpp  footest.cpp  footest.hpp  main.cpp  parameterstacktest.cpp  statetest.cpp  tabletest.cpp  typesystemtest.cpp
testScripts/: forward_call.lua  globals.lua  identity.lua  printTable.lua
